[package]
authors = [
    "The Cortex-M Team <cortex-m@teams.rust-embedded.org>",
]
categories = ["embedded", "no-std"]
description = "Foundational mutex trait and helpers"
documentation = "https://docs.rs/core-mutex"
keywords = ["mutex"]
license = "MIT OR Apache-2.0"
name = "core-mutex"
#readme = "README.md"
#repository = ""
version = "0.1.0"
edition = "2018"

[dev-dependencies]
embedded-hal = "0.2.3"
